--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,6 +199,14 @@ jobs:
         vectormathbench_avx2.exe >> BENCHMARK.md
 
         cat BENCHMARK.md >> %GITHUB_STEP_SUMMARY%
+
+    - name: Commit and Push Changes
+      shell: bash
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add BENCHMARK.md
+        git diff --staged --quiet || (git commit -m "Update benchmark results [auto]" && git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main)
     
 
 
