testing a different method

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,15 +199,38 @@ jobs:
         vectormathbench_avx2.exe >> BENCHMARK.md
 
         cat BENCHMARK.md >> %GITHUB_STEP_SUMMARY%
+    
+    - name: Upload Windows Benchmark
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows_benchmark.md
+        path: BENCHMARK.md
 
-    - name: Commit and Push Changes
-      shell: bash
+        
+# normally this would require both ubuntu and windows to have succeeded. 
+# but ubuntu isn't working because of one of the other libs, 
+# and I really don't feel like debugging somebody else's project (for free)
+ commit-push-benchmark:
+  name: Benchmark Update
+  needs: [benchmark-windows]
+  runs-on: ubuntu-latest
+  shell: bash
+  
+  steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: Download Windows msvc Output
+      uses: actions/download-artifact@v4
+      with:
+        name: windows_benchmark.md
+
+    - name: push and commit
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add BENCHMARK.md
+        git add windows_benchmark.md
         git diff --staged --quiet || (git commit -m "Update benchmark results [auto]" && git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main)
-    
 
 
   # docs:
