--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,27 +80,35 @@ jobs:
     - name: Run Benchmark
       working-directory: build
       run: |
-        echo "# Benchmark Results (ubuntu-latest)" > BENCHMARK.md
-        echo "" >> BENCHMARK.md
+        echo "# Benchmark Results (ubuntu-latest)" > ubuntu_benchmark.md
+        echo "" >> ubuntu_benchmark.md
 
-        echo ## System Info >> BENCHMARK.md
-        echo CPU: $(lscpu | grep "Model name" | sed -e 's/Model name: *//') >> BENCHMARK.md
-        echo OS: $(lsb_release -d | sed -e 's/Description: *//') >> BENCHMARK.md
-        echo OS Version: $(lsb_release -r | sed -e 's/Release: *//') >> BENCHMARK.md
-        echo "" >> BENCHMARK.md
+        echo ## System Info >> ubuntu_benchmark.md
+        echo CPU: $(lscpu | grep "Model name" | sed -e 's/Model name: *//') >> ubuntu_benchmark.md
+        echo OS: $(lsb_release -d | sed -e 's/Description: *//') >> ubuntu_benchmark.md
+        echo OS Version: $(lsb_release -r | sed -e 's/Release: *//') >> ubuntu_benchmark.md
+        echo "" >> ubuntu_benchmark.md
         
-        echo "## SSE 4.2" >> BENCHMARK.md
-        ./vectormathbench_sse42 >> BENCHMARK.md
-        echo "" >> BENCHMARK.md
+        echo "## SSE 4.2" >> ubuntu_benchmark.md
+        ./vectormathbench_sse42
+        cat benchmark_results.txt >> ubuntu_benchmark.md
+        echo "" >> ubuntu_benchmark.md
         
-        echo "## AVX" >> BENCHMARK.md
-        ./vectormathbench_avx >> BENCHMARK.md
-        echo "" >> BENCHMARK.md
+        echo "## AVX" >> ubuntu_benchmark.md
+        ./vectormathbench_avx
+        cat benchmark_results.txt >> ubuntu_benchmark.md
+        echo "" >> ubuntu_benchmark.md
         
-        echo "## AVX2" >> BENCHMARK.md
-        ./vectormathbench_avx2 >> BENCHMARK.md
+        echo "## AVX2" >> ubuntu_benchmark.md
+        ./vectormathbench_avx2
+        cat benchmark_results.txt >> ubuntu_benchmark.md
 
-        cat BENCHMARK.md >> $GITHUB_STEP_SUMMARY
+
+    - name: Upload Ubuntu Benchmark
+      uses: actions/upload-artifact@v4
+      with:
+        name: ubuntu_benchmark.md
+        path: build/ubuntu_benchmark.md
 
   benchmark-windows:
     needs: [lint]
