--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install static analyzers
-      run: sudo apt-get install clang-tidy cppcheck -y -q
+      run: sudo apt-get install clang-tidy -y -q
 
     - name: Configure
       shell: pwsh
